addition of key tips section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,57 @@
             <p><b>Support our student community-</b> keep in mind under-served and marginalized students may experience disproportionate stressors including lack of resources or need for an accessible format. Your support and flexibility can make all the difference in student success.</p>
 
             <p><b>Seek support from colleagues</b>- We encourage faculty to stay in communication with colleagues both in your own department and also across the university for ideas on how best to transition to remote teaching. There are likely some discipline-specific needs that may be solved with creativity in brainstorming with faculty teaching similar content. </p>
-          </div>
+            <h2>Getting Started &amp; Key Tips</h2>
+            <ol>
+              <li>Be proactive, create a virtual plan now. The good news is the more we prepare, the better the transition will go.</li>
+              <li>Sign up for VCU alert system and update all of your contact and emergency information.</li>
+              <li>Ask your students to do the same. Students need to be proactive now to get all contact information and emergency information updated in official VCU systems. Remind your students that all communications go through VCU email. We recommend announcing this in every single class meeting and through any virtual communication you have with students (Blackboard, email, etc.).</li>
+              <li>Make sure you have a way to contact all of your students (e.g., accurate email address).</li>
+              <li>Take stock of learning goals and stay flexible:
+            <ol>
+              <li>Review your learning outcomes. What do you want your students to know and be able to do when they complete your course? Are there any adjustments that can be made while still meeting those goals?</li>
+              <li>Review your syllabus to establish your immediate needs.
+            <ol>
+              <li>What needs to be changed to work online? (content, interactions, assessments, etc.)</li>
+            </ol>
+            </li>
+              <li>Think long term- what changes need to be made to major projects that were assigned before you had to transition your course?</li>
+              <li>Flexibility: As mentioned above, think about how can you stay flexible in your teaching strategy? For example, perhaps a course project requiring students to attend events or visit public galleries or museums gets converted to a remote project using online museum archives.</li>
+              <li>Keep accessibility needs in mind as you plan for a remote teaching and learning environment. For students with documentation, you will already know what accommodations are needed for your course. But you may need to look over documentation again and think about how this translates to remote teaching and learning. For example, extra time on quizzes and exams will require instructor planning for online delivery.</li>
+            </ol>
+            </li>
+              <li>Get your tech needs in order:
+            <ol>
+              <li>We suggest hosting at least one face to face class using a remote format to give yourself a chance to think through your approach, the student experience, and possible tech needs. This test run usually brings relevant tech and even non-technical issues to the forefront. By facilitating one remote format class meeting, both faculty and your students will be better equipped to adjust for a rapid transition should that situation arise.</li>
+              <li>Equipment- Do you have a desktop computer, laptop, or tablet device for use at home? Does your wifi work well at home? Perhaps you need to order a webcam and/or microphone headset now?</li>
+              <li>Set up systems that support your rapid transition to Keep on Teaching:
+            <ol>
+              <li>Set up RamsVPN (Virtual Private Network) to work from home. VPN allows you to securely login into your VCU drives and folders. The VCU VPN system requires a two-factor authentication system using Duo mobile app.</li>
+              <li>Tools- You may want to set up your Zoom account (you have access to Zoom Pro as a VCU employee) or check out Google tools you may use to Keep on Teaching. (see below for tools)</li>
+            </ol>
+            </li>
+            </ol>
+            </li>
+              <li>Talk Early, Talk Often
+            <ol>
+              <li>Communicate with your students.
+            <ol>
+              <li>Students will likely face some confusion and uncertainty as courses rapidly transition to remote format.</li>
+              <li>Be clear about your new expectations. Sometimes we think our expectations are clear, but students are not so certain.</li>
+              <li>Be clear about where and when things will occur. Predictability and clarity on due dates, sticking to the previous plan when possible, will help students succeed.</li>
+              <li>Help students understand what they’ll need to do to succeed and what resources they’ll need.            
+            </li>
+            </ol>
+            </li>
+            </ol>
+            </li>
+              <li>Maintain your course schedule
+            <ol>
+              <li>Sticking to the course schedules provides you and the students with a predictable map for where you are headed. Students will need to maintain as much structure as possible so that they do not get behind in courses that used to meet in person.</li>
+            </ol>
+            </li>
+            </ol>
+          </div>          
         </div>
         <!--end row 1-->
   <!--row 2 tools nav-->
