--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Keep on Teaching at VCU</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,40 +15,41 @@
     <body>
       <!--this is an evolving document - it is only a two days old - be kind to it and the intent of the authors-->
         <div class="container content-primary__content" id="keep-on">
-          <div class="row" id="tools">
+          <div class="row" id="tips">
             <div class="col-md-12">
             <h1>Keep on Teaching</h1>
+
+            <p>Read the <a href="https://provost.vcu.edu/covidguidance/"><em>Coronavirus management at VCU: current instructional guidance for faculty</em></a> message from Provost Hackett and Dr. Buckley.</p>
             
-            <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Where we have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person academic meetings will need to transition to a remote format. If all or part of VCU instructional locations become unavailable or need to be closed, academic continuity can maintain course progression.</p>
+            <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person academic meetings will need to transition to a remote format. If all or part of VCU instructional locations become unavailable or need to be closed, academic continuity can maintain course progression.</p>
             <h2>The Goal = Academic Continuity</h2>
 
-            <p>This toolkit was developed to provide faculty with options to <b>keep teaching</b> and for faculty to consider providing options for students to support them as they <b>keep learning</b>. The tips, strategies, tools, and resources below are not intended to be a comprehensive lesson in online course pedagogy. The core purpose is to support faculty with a rapid transition to remote instruction that will promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity. </p>
+            <p>This toolkit was developed to provide faculty with options to <strong>keep teaching</strong> and for faculty to consider providing options for students to support them as they <strong>keep learning</strong>. The tips, strategies, tools, and resources below are not intended to be a comprehensive lesson in online course pedagogy. The core purpose is to support faculty with a rapid transition to remote instruction that will promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity. </p>
 
             <h2>General Principles</h2>
-            <p><b>Be proactive- </b>As you prepare for change, a proactive approach before the urgent needs arises is always the preferred approach.  Nothing beats getting prepared in advance for any unexpected situation that may require in-person courses and other academic work to be rapidly converted to a remote or online format. The more you prepare in advance, the easier the transition.</p>
+            <p><strong>Be proactive- </strong>As you prepare for change, a proactive approach before the urgent need arises is always the preferred approach.  Nothing beats getting prepared in advance for any unexpected situation that may require in-person courses and other academic work to be rapidly converted to a remote or online format. The more you prepare in advance, the easier the transition.</p>
 
-            <p><b>Prioritize care, compassion, kindness- </b>Some of your students may need to miss class, find alternate ways to submit assignments depending on their technology/wifi access, or request an extension for an assignment/exam. Knowing that you care about them and their success may make all the difference in their motivation, persistence, and ultimate success in course completion. </p>
+            <p><strong>Prioritize care, compassion, kindness- </strong>Some of your students may need to miss class, find alternate ways to submit assignments depending on their technology/wifi access, or request an extension for an assignment/exam. Knowing that you care about them and their success may make all the difference in their motivation, persistence, and ultimate success in course completion. </p>
 
-            <p><b>Stay calm-</b> Students look to you for leadership. If students see that you are calm and that you are assuring them everything will be ok with the course, that will go a long way to keep them positive and engaged. You set the tone for helping your students stay calm.</p>
+            <p><strong>Stay calm-</strong> Students look to you for leadership. If students see that you are calm and that you are assuring them everything will be ok with the course, that will go a long way to keep them positive and engaged. You set the tone for helping your students stay calm.</p>
 
-            <p><b>Keep it simple- </b>Please do not expect to launch a fully online course that would typically take 18 months to develop. Choose tools that are already in use by both you and the students.You do not need all the bells and whistles to be effective. Keep it simple and choose technology tools that will support your particular learning goals and needs. </p>
+            <p><strong>Keep it simple- </strong>Please do not expect to launch a fully online course that would typically take 18 months to develop. Choose tools that are already in use by both you and the students.You do not need all the bells and whistles to be effective. Keep it simple and choose technology tools that will support your particular learning goals and needs. </p>
 
-            <p><b>Practice pedagogical flexibility</b>- In times of rapid transition to remote teaching, flexibility goes a long way. Pedagogical flexibility allows us to get creative with assignment design, exam format, options for students such as choosing from a list of projects, interactive discussions, avenues for student submission of their work, etc. At its core, teaching is a creative process. </p>
+            <p><strong>Practice pedagogical flexibility</strong>- In times of rapid transition to remote teaching, flexibility goes a long way. Pedagogical flexibility allows us to get creative with assignment design, exam format, options for students such as choosing from a list of projects, interactive discussions, avenues for student submission of their work, etc. At its core, teaching is a creative process. </p>
 
-            <p><b>Support our student community-</b> keep in mind under-served and marginalized students may experience disproportionate stressors including lack of resources or need for an accessible format. Your support and flexibility can make all the difference in student success.</p>
+            <p><strong>Support our student community-</strong> keep in mind under-served and marginalized students may experience disproportionate stressors including lack of resources or need for an accessible format. Your support and flexibility can make all the difference in student success.</p>
 
-            <p><b>Seek support from colleagues</b>- We encourage faculty to stay in communication with colleagues both in your own department and also across the university for ideas on how best to transition to remote teaching. There are likely some discipline-specific needs that may be solved with creativity in brainstorming with faculty teaching similar content. </p>
+            <p><strong>Seek support from colleagues</strong>- We encourage faculty to stay in communication with colleagues both in your own department and also across the university for ideas on how best to transition to remote teaching. There are likely some discipline-specific needs that may be solved with creativity in brainstorming with faculty teaching similar content. </p>
             <h2>Getting Started &amp; Key Tips</h2>
             <ol>
               <li>Be proactive, create a virtual plan now. The good news is the more we prepare, the better the transition will go.</li>
-              <li>Sign up for VCU alert system and update all of your contact and emergency information.</li>
-              <li>Ask your students to do the same. Students need to be proactive now to get all contact information and emergency information updated in official VCU systems. Remind your students that all communications go through VCU email. We recommend announcing this in every single class meeting and through any virtual communication you have with students (Blackboard, email, etc.).</li>
+              <li>Remind your students that all communications go through VCU email. We recommend announcing this in every single class meeting and through any virtual communication you have with students (Blackboard, email, etc.).</li>
               <li>Make sure you have a way to contact all of your students (e.g., accurate email address).</li>
               <li>Take stock of learning goals and stay flexible:
-            <ol>
+            <ol type="a">
               <li>Review your learning outcomes. What do you want your students to know and be able to do when they complete your course? Are there any adjustments that can be made while still meeting those goals?</li>
               <li>Review your syllabus to establish your immediate needs.
-            <ol>
+            <ol type="i">
               <li>What needs to be changed to work online? (content, interactions, assessments, etc.)</li>
             </ol>
             </li>
@@ -58,21 +59,21 @@
             </ol>
             </li>
               <li>Get your tech needs in order:
-            <ol>
+            <ol type="a">
               <li>We suggest hosting at least one face to face class using a remote format to give yourself a chance to think through your approach, the student experience, and possible tech needs. This test run usually brings relevant tech and even non-technical issues to the forefront. By facilitating one remote format class meeting, both faculty and your students will be better equipped to adjust for a rapid transition should that situation arise.</li>
               <li>Equipment- Do you have a desktop computer, laptop, or tablet device for use at home? Does your wifi work well at home? Perhaps you need to order a webcam and/or microphone headset now?</li>
               <li>Set up systems that support your rapid transition to Keep on Teaching:
-            <ol>
-              <li>Set up RamsVPN (Virtual Private Network) to work from home. VPN allows you to securely login into your VCU drives and folders. The VCU VPN system requires a two-factor authentication system using Duo mobile app.</li>
-              <li>Tools- You may want to set up your Zoom account (you have access to Zoom Pro as a VCU employee) or check out Google tools you may use to Keep on Teaching. (see below for tools)</li>
+            <ol type="i">
+              <li>Set up <a href="http://go.vcu.edu/ramsvpn">RamsVPN (Virtual Private Network)</a> to work from home. VPN allows you to securely login into your VCU drives and folders. The VCU VPN system requires a two-factor authentication system using Duo mobile app.</li>
+              <li>Tools- You may want to <a href="https://ts.vcu.edu/askit/video-services/video-conferencing-support/zoom-desktop-conferencing/">set up your Zoom account</a> (you have access to Zoom Pro as a VCU employee) or check out Google tools you may use to Keep on Teaching. (see below for tools)</li>
             </ol>
             </li>
             </ol>
             </li>
               <li>Talk Early, Talk Often
-            <ol>
+            <ol type="a">
               <li>Communicate with your students.
-            <ol>
+            <ol type="i">
               <li>Students will likely face some confusion and uncertainty as courses rapidly transition to remote format.</li>
               <li>Be clear about your new expectations. Sometimes we think our expectations are clear, but students are not so certain.</li>
               <li>Be clear about where and when things will occur. Predictability and clarity on due dates, sticking to the previous plan when possible, will help students succeed.</li>
@@ -83,7 +84,7 @@
             </ol>
             </li>
               <li>Maintain your course schedule
-            <ol>
+            <ol type="a">
               <li>Sticking to the course schedules provides you and the students with a predictable map for where you are headed. Students will need to maintain as much structure as possible so that they do not get behind in courses that used to meet in person.</li>
             </ol>
             </li>
@@ -217,7 +218,7 @@
       <div class="col-md-3">
         <h4>Resources</h4>
         <ul>
-          <li><a href="https://www.linkedin.com/learning/google-drive-essential-training-3/do-more-than-store-files-with-google-drive?u=76209018">Blackboard Essentials Training</a></li>
+          <li><a href="https://www.linkedin.com/learning/blackboard-essential-training/welcome?u=76209018">Blackboard Essentials Training</a></li>
           <li><a href="https://vcu.mediaspace.kaltura.com/channel/Blackboard%2BBasics/65678141">Blackboard Learning Academy</a></li>
         </ul>
       </div>
@@ -274,7 +275,7 @@
     <div class="col-md-4 restrictions">
       <h4>Details</h4>
       <ul>
-        <li>Host up to 500 participants</li>
+        <li>Host up to 300 participants</li>
         <li>Unlimited 1 to 1 meetings
         </li>
       </ul>
@@ -311,7 +312,7 @@
     <div class="col-md-3">
       <h4>Resources</h4>
       <ul>
-        <li><a hre="https://ts.vcu.edu/askit/teaching-and-learning/kaltura/kaltura-capture/">Kaltura Capture at VCU</a></li>
+        <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/kaltura/kaltura-capture/">Kaltura Capture at VCU</a></li>
         <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/kaltura/captioning-and-editing-in-kaltura/">Adding transcripts to Kaltura</a></li>
         <li><a href="https://www.youtube.com/watch?v=09C18oSB3uk&feature=youtu.be">Tips for making good videos and screencasts</a></li>
       </ul>
@@ -505,13 +506,26 @@
       </ul>
     </div>
      <div class="col-md-8">
-      <h3 id="stu-academic">Additional Resources:</h3>
+      <h3 id="hardware">Additional Resources:</h3>
       <ul>
         <li>Hardware Needs:  If you need to purchase a laptop, computer, tablet, microphone or webcam - consider <a href="https://ramtech.vcu.edu/">RAM Tech</a> (VCU discounts and payroll deduction) or a reputable retailer.  Most laptops now have integrated webcams and wireless headphones usually have integrated microphones in them, which can be used for remote teaching and learning.</li>
         <li>Wifi/internet access:  employees and students can add “hot spots” to their wireless cellphone plans or access VCU SafeNet while being in your car in/around the VCU campuses.  </li>
         
       </ul>
     </div>
+       <!--row inclusive excellence-->
+      <div class="col-md-8">
+        <h3 id="inclusive">Statement from VCU’s Inclusive Excellence:</h3>
+        <p>Virginia Commonwealth University remains committed to promoting a culture of inclusion for all its employees, patients and students. Discrimination or discriminatory harassment is not only unlawful, but it is harmful to the well-being of our university community. We are aware of the news reports regarding bullying, harassment and stereotyping of Chinese Americans and persons of Asian descent in light of the coronavirus (COVID-19). There is no place for this sort of behavior, especially not at VCU. Our university values, specifically those related to diversity and inclusion, have withstood many difficult situations and trying times, and they will not falter now. Please be assured that VCU will make every effort to prevent the occurence of unlawful discrimination and, if necessary, take prompt and appropriate action to remedy and prevent its reoccurence. Every member of our community is asked to:</p>
+        <ul>
+          <li>Become familiar with the university’s policy on <a href="https://policy.vcu.edu/universitywide-policies/policies/preventing-and-responding-to-discrimination.html">preventing and responding to discrimination</a> in the VCU Policy Library.</li>
+          <li>Consult with Equity and Access Services or <a href="https://hr.vcu.edu/">VCU Human Resources</a> for additional guidance on how to maintain a bias-free environment.</li>
+          <li>Encourage individuals affected by this type of misconduct to file a report of discrimination or harassment with <a href="https://equity.vcu.edu/">Equity and Access Services</a>.</li>
+          <li>Bookmark and share information on university or community agencies that offer support or services, such as <a href="https://counseling.vcu.edu/">VCU Counseling Services</a>.</li>
+          <li>Offer nonjudgmental support and empathy to those affected.</li>
+        </ul>
+      </div>
+    <!--end inclusive -->
 
   </div>
   <!--end support row-->
