--- a/students/index.html
+++ b/students/index.html
@@ -15,13 +15,13 @@
     <body>
       <!--this is an evolving document - it is only a two days old - be kind to it and the intent of the authors-->
         <div class="container content-primary__content" id="keep-on">
-          <div class="row" id="tips">
+          <div class="row" id="intro">
                 <div class="col-md-12">
                      <h1>Keep on Learning</h1>
                      <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person courses will need to transition to a remote format. Don’t worry! Your professors will do everything they can to make sure your course stays on track.</p>
                      <h2>The Goal = Keep Learning</h2>
                      <p>This toolkit was developed to provide students resources and support as they keep learning. The tips, tools, and resources below are here to support students with unexpected transition to remote learning and promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity.</p>
-                     <h2>Rams Frame of Mind</h2>
+                     <h2>The Ram Frame of Mind</h2>
                      <p>
                         <strong>Be proactive</strong>- The more you prepare in advance, the easier the transition. Update your contact information with VCU. At least once a day, check your <a href="http://mail.google.com/a/mymail.vcu.edu">VCU email</a> and any course communication tools (for example, <a href="https://blackboard.vcu.edu/">Blackboard</a>) for updates. 
                      </p>
@@ -39,8 +39,32 @@
                      </p> 
                       <p>
                         <strong>Speak up if you need to talk</strong>- In times like these, you may need to talk to someone who can listen, support you, and help you focus on your learning. We really do encourage you to reach out to your Academic Advisor if you want to talk. Not sure who is your current advisor, <a href="https://academicadvising.vcu.edu/find/">find your advisor here</a>. They are there for you!! The VCU <a href="https://counseling.vcu.edu/">University Counseling Services</a> is another great source on campus for students. 
-                     </p>                             
-
+                     </p> 
+                                                
+                </div>                
+            </div>
+            <div class="row app-row" id="topic">
+                <div class="col-md-12"><h1>Stay Informed</h1></div>
+                <div class="col-md-12">
+                  <h2>Course Communications</h2>
+                </div>
+                <div class="col-md-8">
+                  <p>Faculty/instructors have been encouraged to send updated course completion directions to all enrolled students via the platform they normally used throughout the semester.</p>
+                  <ul>
+                      <li><a href="http://mail.google.com/a/mymail.vcu.edu">VCU Email</a></li>
+                      <li><a href="https://blackboard.vcu.edu/">Blackboard</a></li>
+                      <li><a href="https://studentsuccess.vcu.edu/navigate/">Navigate</a></li>
+                      <li><a href="https://classroom.google.com/h">Google Classroom</a></li>
+                  </ul>
+                  <p>
+                      
+                  </p>
+                </div>
+                <div class="col-md-12">
+                  <h2>Accurate and updated info on COVID-19</h2>
+                </div>
+                <div class="col-md-8">
+                  <p>There is a lot of bad information out there on social media. We want you to stay informed with truly accurate information on the current COVID-19 situation. President Rao has been providing regular updates via email and on the <a href="https://blogs.vcu.edu/covid-19-coronavirus/">VCU COVID-19 website</a> dedicated to keeping us all informed. </p>
                 </div>
             </div>
          </div>
