--- a/students/index.html
+++ b/students/index.html
@@ -57,7 +57,7 @@
                       <li><a href="https://classroom.google.com/h">Google Classroom</a></li>
                   </ul>
                   <p>
-                      
+                      It is the responsibility of the student to monitor their VCU email, Blackboard course site, and if used by the instructor, Google Classroom to learn about updates and next steps to completing their classes on-line/remotely. Some announcements may go out to students through Navigate (available through your <a href="http://vcu.campus.eab.com/">Navigate app</a> or through <a href="https://my.vcu.edu/">eServices/MyVCU</a>).
                   </p>
                 </div>
                 <div class="col-md-12">
@@ -65,6 +65,12 @@
                 </div>
                 <div class="col-md-8">
                   <p>There is a lot of bad information out there on social media. We want you to stay informed with truly accurate information on the current COVID-19 situation. President Rao has been providing regular updates via email and on the <a href="https://blogs.vcu.edu/covid-19-coronavirus/">VCU COVID-19 website</a> dedicated to keeping us all informed. </p>
+                </div>
+                <div class="col-md-12">
+                  <h2>Working Together on Group Projects</h2>
+                </div>
+                <div class="col-md-8">
+                  <p></p>
                 </div>
             </div>
          </div>
