alert update w hours

--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@
     <body>
       <!--this is an evolving document - it is only a two days old - be kind to it and the intent of the authors-->
         <div class="container content-primary__content" id="keep-on">
-          <div class="row" id="tips">
+          <div class="row" id="tips">           
             <div class="col-md-12">
-            <h1>Keep on Teaching</h1>
-
-            <p>Read the <a href="https://provost.vcu.edu/covidguidance/"><em>Coronavirus management at VCU: current instructional guidance for faculty</em></a> message from Provost Hackett and Dr. Buckley.</p>
+            <h1>Keep on Teaching</h1>   
             
             <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person academic meetings will need to transition to a remote format. If all or part of VCU instructional locations become unavailable or need to be closed, academic continuity can maintain course progression.</p>
+            
+             <div class="col-md-12 alert alert-covid" role="alert" id="alert">
+              <h2>Coronavirus Instructional Support</h2>
+               <p>Open office hours to support course transition will be held from <strong>8AM-5PM Monday-Friday in room 4102L</strong> of the <a href="https://www.google.com/maps/place/University+Learning+Center,+1000+Floyd+Ave,+Richmond,+VA+23220/@37.5474217,-77.4567296,17z/data=!3m1!4b1!4m5!3m4!1s0x89b1114437a0ac75:0xca1e28fab0d8094d!8m2!3d37.5474217!4d-77.4545409"  target="_blank">Academic Learning Commons (1000 Floyd Avenue)</a>. </p>
+               <p>You can also <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">request transition support online here.</a></p>
+            </div>      
+
+            <p>Read the <a href="https://provost.vcu.edu/covidguidance/"><em>Coronavirus management at VCU: current instructional guidance for faculty</em></a> message from Provost Hackett and Dr. Buckley.</p>
+
             <h2>The Goal = Academic Continuity</h2>
 
             <p>This toolkit was developed to provide faculty with options to <strong>keep teaching</strong> and for faculty to consider providing options for students to support them as they <strong>keep learning</strong>. The tips, strategies, tools, and resources below are not intended to be a comprehensive lesson in online course pedagogy. The core purpose is to support faculty with a rapid transition to remote instruction that will promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity. </p>
