--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
              <div class="col-md-12 alert alert-covid" role="alert" id="alert">
               <h2>Coronavirus Instructional Support</h2>
                <p>Open office hours to support course transition will be held from <strong>8AM-5PM Monday-Friday in room 4102L</strong> of the <a href="https://www.google.com/maps/place/University+Learning+Center,+1000+Floyd+Ave,+Richmond,+VA+23220/@37.5474217,-77.4567296,17z/data=!3m1!4b1!4m5!3m4!1s0x89b1114437a0ac75:0xca1e28fab0d8094d!8m2!3d37.5474217!4d-77.4545409"  target="_blank">Academic Learning Commons (1000 Floyd Avenue)</a>. </p>
-               <p>You can also <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">request transition support online here.</a></p>
+               <p>You can also <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">request transition support online and/or after normal business hours here.</a></p>
             </div>      
 
             <p>Read the <a href="https://provost.vcu.edu/covidguidance/"><em>Coronavirus management at VCU: current instructional guidance for faculty</em></a> message from Provost Hackett and Dr. Buckley.</p>
@@ -225,6 +225,7 @@
       <div class="col-md-3">
         <h4>Resources</h4>
         <ul>
+          <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/blackboard-elearning/">Blackboard Support at VCU</a></li>
           <li><a href="https://www.linkedin.com/learning/blackboard-essential-training/welcome?u=76209018">Blackboard Essentials Training</a></li>
           <li><a href="https://vcu.mediaspace.kaltura.com/channel/Blackboard%2BBasics/65678141">Blackboard Learning Academy</a></li>
         </ul>
@@ -252,8 +253,9 @@
       <div class="col-md-3">
         <h4>Resources</h4>
         <ul>
-          <li><a href="https://support.google.com/a/users/answer/9310246?hl=en">Google Drive Basics</a></li>
+          <li><a href="https://collaborate.vcu.edu/apps/drive/">VCU Collaboration Services Google Suite Support </a></li>
           <li><a href="https://www.linkedin.com/learning/google-drive-essential-training-3/do-more-than-store-files-with-google-drive?u=76209018">Google Drive Essential Training</a></li>
+          <li><a href="https://support.google.com/a/users/answer/9310246?hl=en">General Google Drive Information</a></li>
         </ul>
       </div>
     </div>
@@ -271,20 +273,19 @@
   <!--zoom row-->
   <div class="row single-app-row" id="zoom">
     <div class="col-md-12">
-      <h3>Zoom</h3>      
+      <h3>Zoom Pro</h3>      
     </div>
     <div class="col-md-5">
       <div class="description">
         <h4>Description</h4>
-        <p>Zoom is a good option for live video and audio conferencing, collaboration, chat, and webinars across mobile devices, desktops, and telephones. Keep in mind that all videos need transcripts to be accessible.</p>        
+        <p>Zoom is a good option for live video and audio conferencing, collaboration, and chat across mobile devices, desktops, and telephones. Keep in mind that all videos need transcripts to be accessible.</p>        
       </div>
     </div>
     <div class="col-md-4 restrictions">
       <h4>Details</h4>
       <ul>
         <li>Host up to 300 participants</li>
-        <li>Unlimited 1 to 1 meetings
-        </li>
+        <li>Integrated polling, group chats, and more</li>
       </ul>
     </div>
     <div class="col-md-3">
