--- a/students/index.html
+++ b/students/index.html
@@ -23,7 +23,7 @@
                      <p>This toolkit was developed to provide students resources and support as they keep learning. The tips, tools, and resources below are here to support students with unexpected transition to remote learning and promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity.</p>
                      <h2>The Ram Frame of Mind</h2>
                      <p>
-                         <strong>Be well</strong>- Our main priority is your health! Please check out the health tips and FAQs on the VCU University Health Services. 
+                         <strong>Be well</strong>- Our main priority is your health! Please check out the health tips and FAQs on the <a href="https://health.students.vcu.edu/">VCU University Health Services</a>. 
                      </p>
                      <p>
                         <strong>Be proactive</strong>- The more you prepare in advance, the easier the transition. Update your contact information with VCU. At least once a day, check your <a href="http://mail.google.com/a/mymail.vcu.edu">VCU email</a> and any course communication tools (for example, <a href="https://blackboard.vcu.edu/">Blackboard</a>) for updates. 
