--- a/students/index.html
+++ b/students/index.html
@@ -199,6 +199,18 @@
                     </ul>
                   </div>
                 <!--end inclusive -->
+                 <div class="col-md-8">
+                    <h3 id="policy">Policies:</h3>
+                    <ul>
+                          <li><a href="http://bulletin.vcu.edu/about/ferpa/">Rights of Students under FERPA</a></li>
+                          <li><a href="https://policy.vcu.edu/universitywide-policies/policies/computer-and-network-resources-use.html">Computer &amp; Network Resources Use</a></li>
+                          <li><a href="https://conduct.students.vcu.edu/student-code-of-conduct/">Student Code of Conduct</a></li>
+                          <li><a href="https://conduct.students.vcu.edu//vcu-honor-system/">VCU Honor Code</a></li>
+                          <li><a href="http://bulletin.vcu.edu/academic-regs/university/attendance/">Attendance</a></li>
+                        <li><a href="http://bulletin.vcu.edu/academic-regs/ugrad/medical-leave-absence/">Medical Leave of Absence </a>(undergraduate students) and <a href="http://bulletin.vcu.edu/academic-regs/university/leave-of-absence/">Leave of Absence</a> (Graduate and Professional students only)</li>
+                        <li><a href="https://rar.vcu.edu/media/strategic-enrollment-management/rar/docs/IncompleteGrade1.pdf">Incomplete Grade Form (requesting incomplete grade)</a></li>
+                    </ul>
+                  </div>
 
             </div>
          </div>
