--- a/students/index.html
+++ b/students/index.html
@@ -159,7 +159,7 @@
                   </ul>
                 </div>
                 <div class="col-md-8">
-                  <h3>Technology Support</h3>
+                  <h3>Academic Support</h3>
                   <ul>
                     <li><a href="https://clc.vcu.edu/forms/ditutoring/">Tutoring: </a>Tutoring services will continue to be offered but in a Zoom format. Students will be sent a Zoom link by their tutor to join the session.  Students will be given information about their sessions via email beforehand.</li>
                     <li><a href="https://clc.vcu.edu/supplemental-instruction/">Supplemental Instruction: </a>Courses that have supplemental instruction will continue to host sessions as regularly scheduled, but via a Zoom/Adobe Connect platform.  More information will be provided to students via their class Blackboard site via an announcement.</li>
