--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Keep on Teaching at VCU</title>
+        <meta property="og:title" content="Keep on Teaching at VCU" />
+        <meta property="og:type" content="" />
+        <meta property="og:url" content="https://altlab.vcu.edu/rapid-response/" />
+        <meta property="og:image" content="https://altlab.vcu.edu/rapid-response/imgs/main.jpg" />
+        <meta property="og:image:width" content="1357" />
+        <meta property="og:image:height" content="1357" />
+
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
